before get all events
